@@ -1,0 +1,6 @@
+namespace Mdk.Hub.Features.Projects.ListEditor;
+
+/// <summary>
+/// Result from the list editor dialog.
+/// </summary>
+public record ListEditorDialogResult(string[]? Items);
