@@ -1,0 +1,19 @@
+using Avalonia.Controls;
+using Mal.SourceGeneratedDI;
+
+namespace Mdk.Hub.Features.Projects.ListEditor;
+
+/// <summary>
+/// View for the list editor dialog.
+/// </summary>
+[Instance]
+public partial class ListEditorDialogView : UserControl
+{
+    /// <summary>
+    /// Initializes a new instance of the ListEditorDialogView class.
+    /// </summary>
+    public ListEditorDialogView()
+    {
+        InitializeComponent();
+    }
+}
