@@ -4,6 +4,8 @@ v.1.0.0-pre.43
    - Last used project location now remembered per template type.
    - Added macro editor for custom text replacement in projects.
    - Macros can be configured separately for shared (Main) and local (developer-specific) settings.
+   - Added list editors for Namespaces and Ignores configuration.
+   - Configuration editors now include descriptions explaining their purpose.
 
 v.1.0.0-pre.42
    - Package update checks now respond to refresh command.
